--- a/header.css
+++ b/header.css
@@ -62,14 +62,14 @@ body {
 body.light {
     --bg-main: #F8F8F8;
     --txt-color: #050505;
-    --bg-secondary: #E0E9F5;
+    --bg-mob-menu: #9BB537;
     --accent: #9BB537;
 }
 
 body.dark {
     --bg-main: #161616;
     --txt-color: #ffffff;
-    --bg-secondary: #1E395C;
+    --bg-mob-menu: #050505;
     --accent: #9BB537;
 }
 
@@ -91,16 +91,6 @@ body.dark {
             background-color: var(--green);
         }
  } */
-
-
-
-
-
-
-
-
-
-
 
 /* -------------------------------- */
 
@@ -169,6 +159,71 @@ body.dark {
 .mobile-menu-pic:focus {
     fill: var(--accent);
 }
+
+.mob-modal {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 2;
+    width: 40%;
+    height: 100%;
+    background-color: var(--bg-mob-menu);
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: space-between; */
+    transform: translateX(0);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu-close-btn {
+    width: 32px;
+    height: 32px;
+    color: var(--white);
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    margin-left: auto;
+        transition-duration: 250ms;
+            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mob-menu-list{
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+.mobile-nav-item {
+    color: var(--white_2);
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 1.25;
+}
+
+
+
+
+
+
+
+
+
+.switch-mob {
+    position: relative;
+    display: flex;
+    width: 46px;
+    height: 20px;
+}
+
+.switch-mob input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+
+
+
 
 /* ----------------------- MOBILE -------------------------- */
 @media screen and (min-width: 375px) {
@@ -289,6 +344,9 @@ body.dark {
         height: 20px;
     }
 }
+/* .mob-modal {
+    display: none;
+} */
 
 /* ----------------------- DESK -------------------------- */
 @media screen and (min-width: 1280px) {
@@ -302,5 +360,39 @@ body.dark {
         gap: 24px;
     }
 }
+
+
+
+
+/* ---------------------------------------------------------------- */
+.mob-modal {}
+
+.menu-close-btn {}
+
+.menu-close-pic {}
+
+.nav-mob-menu {}
+
+.mob-menu-list {}
+
+.list {}
+
+.mobile-nav-item {}
+
+.mobile-nav-link {}
+
+.switch {}
+
+.slider {}
+
+.round {}
+
+
+
+
+
+
+
+
 
 
