--- a/favorites.css
+++ b/favorites.css
@@ -11,7 +11,10 @@
     height: 100%;
     display: flex;
 }
-
+.thumb {
+    border-radius: 3%;
+    overflow: hidden;
+}
 
 /* --------------- MOBILE ------------------ */
 @media screen and (min-width: 375px) {
