--- a/header.css
+++ b/header.css
@@ -197,7 +197,7 @@ body.dark {
     right: 0;
     z-index: 2;
     width: 40%;
-    height: 100%;
+    height: 100vw;
     background-color: var(--bg-mob-menu);
     padding: 20px;
     display: flex;
