--- a/header.css
+++ b/header.css
@@ -6,7 +6,6 @@
     --green: #9BB537;
     --oragne: #EEA10C;
     --gray: rgb(206, 205, 205);
-
     --bg-main: #F8F8F8;
     --txt-color: #050505;
     --bg-secondary: #E0E9F5;
@@ -58,6 +57,7 @@ body {
     background-color: var(--bg-main);
     color: var(--txt-color);
     text-align: center;
+    margin: 0;
 }
 
 .no-scroll {
@@ -90,6 +90,7 @@ body.light {
     --accent: #9BB537;
     --current-mob: #ffffff;
     --gray-color-btn:rgba(5, 5, 5, 0.30);
+    --oragne: #EEA10C;
 }
 
 body.dark {
@@ -99,6 +100,7 @@ body.dark {
     --accent: #9BB537;
     --current-mob:#9BB537;
     --gray-color-btn:rgba(255, 255, 255, 0.3);
+    --oragne: #EEA10C;
 }
 
 
@@ -128,6 +130,10 @@ body.dark {
     justify-content: center;
     margin: 0 auto;
     background-color: var(--bg-main);
+    position: absolute;
+    z-index: 2;
+    top: 0;
+    left: 0;
 }
 
 .header-container {
@@ -135,7 +141,7 @@ body.dark {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 20px 10px;
+    padding: 10px 10px;
 }
 
 .header-navigation {
@@ -147,6 +153,7 @@ body.dark {
     line-height: 1.12;
     letter-spacing: -0.04em;
     color: var(--accent);
+    padding: 20px 0;
 }
 
 .logo-link-span {
@@ -195,19 +202,25 @@ body.dark {
     position: absolute;
     top: 0;
     right: 0;
-    z-index: 2;
+    z-index: 3;
     width: 40%;
-    height: 100vw;
+    height: 100vh;
     background-color: var(--bg-mob-menu);
+    /* padding: 20px; */
+    display: flex;
+    flex-direction: column;
+    transition: opacity .25s ease-in-out,visibility .25s ease-in-out,transform .25s ease-in-out;
+    overflow-y: auto;
+    justify-content: space-between;
+}
+.modal-container {
+    height: 100%;
     padding: 20px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    transform: translateX(0);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.modal-container {
+.mob-menu-top-part {
     display: flex;
     flex-direction: column;
     gap: 148px;
@@ -319,14 +332,14 @@ body.dark {
 @media screen and (min-width: 375px) {
     .header-container{
         width: 375px;
-        padding: 20px;
+        padding: 15px 20px;
     }
 }
 /* ----------------------- TABLET -------------------------- */
 @media screen and (min-width: 768px){
     .header-container {
         width: 768px;
-        padding: 28px 32px;
+        padding: 15px 32px;
     }
     .header-navigation {
         display: flex;
@@ -342,6 +355,7 @@ body.dark {
         font-style: normal;
         font-weight: 400;
         line-height: 1.25;
+        padding: 20px 0;
     }
 
     .current {
@@ -384,7 +398,7 @@ body.dark {
 
     .header-container{
         width: 1280px;
-        padding: 40px 100px;
+        padding: 20px 100px;
     }
 
     .header-btn {
