--- a/header.css
+++ b/header.css
@@ -130,7 +130,7 @@ body.dark {
     justify-content: center;
     margin: 0 auto;
     background-color: var(--bg-main);
-    position: absolute;
+    position: relative;
     z-index: 2;
     top: 0;
     left: 0;
